[tool.poetry]
name = "ceblpy"
version = "0.1.0"
description = "Extract and analyze data form the Canadian Elite Basketball league (CEBL)."
authors = ["Ryan Du"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
